--- a/app/src/main/res/layout/fragment_add_adress.xml
+++ b/app/src/main/res/layout/fragment_add_adress.xml
@@ -77,7 +77,8 @@
                             app:boxStrokeWidthFocused="0dp"
                             app:endIconTint="@color/hint_color"
                             app:hintAnimationEnabled="false"
-                            app:hintEnabled="false">
+                            app:hintEnabled="false"
+                            android:id="@+id/salutationTextInput">
 
                             <com.google.android.material.textfield.MaterialAutoCompleteTextView
                                 android:id="@+id/spinnerTitle"
@@ -110,7 +111,19 @@
                             android:textSize="12sp"
                             app:boxStrokeColor="@color/hint_color" />
 
+
                     </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/nameError"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_marginLeft="2dp"
+                        android:text="* This is a required field"
+                        android:textColor="@color/design_default_color_error"
+                        android:textSize="10sp"
+                        android:visibility="gone"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -122,11 +135,11 @@
                         android:textSize="14sp" />
 
 
+
                     <EditText
                         android:layout_marginTop="3dp"
                         android:layout_width="match_parent"
                         android:layout_height="28dp"
-
                         android:id="@+id/addressLine1"
                         android:background="@drawable/edit_text_bg_2"
                         android:hint="1313 Disneyland Dr,"
@@ -134,7 +147,17 @@
                         android:textColor="@color/black"
                         android:textColorHint="@color/hint_color"
                         android:textSize="12sp"
-                        app:boxStrokeColor="@color/hint_color" />
+                         />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="* This is a required field"
+                        android:textSize="10sp"
+                        android:layout_marginLeft="2dp"
+                        android:id="@+id/addressError"
+                        android:layout_gravity="right"
+                        android:visibility="gone"
+                        android:textColor="@color/design_default_color_error"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -182,6 +205,18 @@
                         android:textColorHint="@color/hint_color"
                         android:textSize="12sp"
                         app:boxStrokeColor="@color/hint_color" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="* This is a required field"
+                        android:textSize="10sp"
+                        android:layout_marginLeft="2dp"
+                        android:textColor="@color/design_default_color_error"
+                        android:id="@+id/cityError"
+                        android:layout_gravity="right"
+                        android:visibility="gone"
+                        />
+
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -205,6 +240,16 @@
                         android:textColorHint="@color/hint_color"
                         android:textSize="12sp"
                         app:boxStrokeColor="@color/hint_color" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="* This is a required field"
+                        android:textSize="10sp"
+                        android:layout_marginLeft="2dp"
+                        android:layout_gravity="right"
+                        android:textColor="@color/design_default_color_error"
+                        android:id="@+id/stateError"
+                        android:visibility="gone"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -236,15 +281,25 @@
                                 android:id="@+id/spinnerCountry"
                                 android:layout_width="match_parent"
                                 android:layout_height="28dp"
-                                android:padding="0dp"
                                 android:hint="Choose Your Country"
                                 android:inputType="none"
+                                android:padding="0dp"
                                 android:textSize="12sp" />
 
                         </com.google.android.material.textfield.TextInputLayout>
 
                     </LinearLayout>
-
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="* This is a required field"
+                        android:textSize="10sp"
+                        android:layout_marginLeft="2dp"
+                        android:textColor="@color/design_default_color_error"
+                        android:id="@+id/countryError"
+                        android:layout_gravity="right"
+                        android:visibility="gone"
+                        />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -269,6 +324,16 @@
                         android:textColorHint="@color/hint_color"
                         android:textSize="12sp"
                         app:boxStrokeColor="@color/hint_color" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="* This is a required field"
+                        android:textSize="10sp"
+                        android:layout_marginLeft="2dp"
+                        android:layout_gravity="right"
+                        android:textColor="@color/design_default_color_error"
+                        android:id="@+id/pinCodeError"
+                        android:visibility="gone"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -295,7 +360,8 @@
                             app:boxStrokeWidthFocused="0dp"
                             app:endIconTint="@color/hint_color"
                             app:hintAnimationEnabled="false"
-                            app:hintEnabled="false">
+                            app:hintEnabled="false"
+                            android:id="@+id/phoneInputLayout">
 
                         <com.google.android.material.textfield.MaterialAutoCompleteTextView
                             android:id="@+id/countryCode"
@@ -328,7 +394,17 @@
                             app:boxStrokeColor="@color/hint_color" />
 
                     </LinearLayout>
-
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="* This is a required field"
+                        android:textSize="10sp"
+                        android:layout_marginLeft="2dp"
+                        android:layout_gravity="right"
+                        android:textColor="@color/design_default_color_error"
+                        android:id="@+id/phoneError"
+                        android:visibility="gone"
+                        />
                     <androidx.appcompat.widget.AppCompatCheckBox
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
