--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".UI.SignupLogin.LoginActivity">
+    tools:context=".UI.SignupLogin.LoginActivity"
+    android:id="@+id/main">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -46,7 +47,7 @@
         app:elevation="4dp"
         app:icon="@drawable/ic_google"
         app:iconSize="24dp"
-        app:iconTintMode="multiply" />
+        app:iconTint="@null" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/login_fb_logo"
@@ -68,7 +69,7 @@
         app:elevation="4dp"
         app:icon="@drawable/ic_fb"
         app:iconSize="24dp"
-        app:iconTintMode="multiply" />
+        app:iconTint="@null" />
 
     <RelativeLayout
         android:layout_width="match_parent"
