--- a/app/src/main/res/layout/activity_sign_up_valid.xml
+++ b/app/src/main/res/layout/activity_sign_up_valid.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".UI.SignupLogin.SignUp_Valid">
+    tools:context=".UI.SignupLogin.SignUp_Valid"
+    android:id="@+id/main">
 
     <ScrollView
         android:layout_width="match_parent"
