--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -72,8 +72,9 @@
                             android:layout_gravity="center_vertical"
                             android:layout_weight="600"
                             android:gravity="end"
-                            android:text="@string/u20b9_100"
-                            android:textColor="@color/black" />
+                            android:text="₹ 000"
+                            android:textColor="@color/black"
+                            android:id="@+id/myWalletMyCash"/>
                     </LinearLayout>
 
                     <LinearLayout
@@ -97,15 +98,17 @@
                             android:textColor="@color/black"
                             android:textFontWeight="600"
                             android:textSize="14sp"
-                            tools:ignore="UnusedAttribute" />
+                            tools:ignore="UnusedAttribute"
+                            />
 
                         <TextView
+                            android:id="@+id/myWalletMyRewards"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_weight="600"
                             android:gravity="end"
-                            android:text="@string/u20b9_250"
+                            android:text="₹ 000"
                             android:textColor="@color/black" />
                     </LinearLayout>
                 </LinearLayout>
@@ -186,7 +189,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="3dp">
+                        android:layout_marginTop="3dp"
+                        android:id="@+id/showMoreContent">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
