--- a/app/src/main/res/layout/fragment_empty_address_book.xml
+++ b/app/src/main/res/layout/fragment_empty_address_book.xml
@@ -78,6 +78,7 @@
 
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/emptyDeliveryAdrsCard"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
@@ -132,6 +133,7 @@
 
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/deliveryAddrsCard"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
@@ -185,7 +187,6 @@
                                         android:hint="All Address"
                                         android:inputType="none"
                                         android:padding="0dp"
-                                        android:paddingStart="20dp"
                                         android:textColorHint="@color/black"
                                         android:textSize="12sp" />
 
@@ -205,7 +206,8 @@
                             <androidx.recyclerview.widget.RecyclerView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/deliveryAdrsRecycler"/>
+                                android:id="@+id/deliveryAdrsRecycler"
+                                android:nestedScrollingEnabled="false"/>
 
 
                         </LinearLayout>
@@ -234,9 +236,6 @@
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
-
-
-
 
 
                 <androidx.cardview.widget.CardView
