--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -19,13 +19,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="22dp"
+
                 android:layout_marginTop="28dp"
                 android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="22dp"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="4dp">
 
@@ -108,26 +109,27 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="28dp"
+                    android:layout_marginHorizontal="22dp"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="4dp">
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="13dp">
 
 
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:orientation="vertical">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="14dp"
-                                android:layout_marginTop="12dp"
                                 android:text="Verify your account details to get started"
-                                android:textColor="@color/black"
+                                android:textColor="#F44336"
                                 android:textFontWeight="600"
                                 android:textSize="11sp" />
 
@@ -135,8 +137,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginVertical="12dp"
-                                android:layout_marginLeft="14dp"
+                                android:layout_marginTop="12dp"
                                 android:lineHeight="10.97dp"
                                 android:text="@string/varify_your_account_details"
                                 android:textColor="@color/black"
@@ -146,12 +147,10 @@
 
                         </LinearLayout>
 
-
                         <com.google.android.material.button.MaterialButton
                             android:layout_width="118dp"
                             android:layout_height="24dp"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginRight="15dp"
+                            android:layout_gravity="center"
                             android:insetTop="0dp"
                             android:insetBottom="0dp"
                             android:text="Verify Email"
@@ -170,6 +169,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="28dp"
+                    android:layout_marginHorizontal="22dp"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="4dp">
 
@@ -180,15 +180,92 @@
 
                         <ImageView
                             android:layout_width="match_parent"
-                            android:layout_height="343dp"
+                            android:layout_height="wrap_content"
                             android:src="@drawable/banner"
                             android:layout_marginTop="-50dp"/>
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="SHOP"/>
+                            android:text="SHOP"
+                            android:textColor="#DF1D37"
+                            android:textFontWeight="700"
+                            android:gravity="center_horizontal"
+                            android:textSize="24sp"/>
 
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="from any Indian websites"
+                            android:textColor="@color/black"
+                            android:textFontWeight="400"
+                            android:gravity="center_horizontal"
+                            android:textSize="14sp"/>
+
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="18dp"
+                            android:text="SHIP"
+                            android:textColor="#F3A10E"
+                            android:textFontWeight="700"
+                            android:gravity="center_horizontal"
+                            android:textSize="24sp"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="across 220+ countries"
+                            android:textColor="@color/black"
+                            android:textFontWeight="400"
+                            android:gravity="center_horizontal"
+                            android:textSize="14sp"/>
+
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="18dp"
+                            android:text="SAVE"
+                            android:textColor="#0B84A0"
+                            android:textFontWeight="700"
+                            android:gravity="center_horizontal"
+                            android:textSize="24sp"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="60-80% on shipping prices"
+                            android:textColor="@color/black"
+                            android:textFontWeight="400"
+                            android:gravity="center_horizontal"
+                            android:textSize="14sp"/>
+
+
+                        <com.google.android.material.button.MaterialButton
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="18dp"
+                            android:text="Calculate Shipping Prices"
+                            android:textSize="14sp"
+                            android:textFontWeight="700"
+                            app:cornerRadius="5dp"
+                            app:backgroundTint="#17B28F"
+                            android:padding="0dp"
+                            android:textAllCaps="false"
+                            android:layout_marginHorizontal="65dp"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="18dp"
+                            android:layout_marginBottom="15dp"
+                            android:text="View Virtual Address"
+                            android:textColor="#2F4CAB"
+                            android:textFontWeight="400"
+                            android:gravity="center_horizontal"
+                            android:textSize="14sp"/>
 
                     </LinearLayout>
 
