--- a/app/src/main/res/layout/single_all_delivery_addresses.xml
+++ b/app/src/main/res/layout/single_all_delivery_addresses.xml
@@ -25,18 +25,19 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="22dp"
                 android:layout_marginBottom="14dp"
-                android:layout_marginHorizontal="22dp">
+                android:layout_marginHorizontal="16dp">
+
 
                 <RadioButton
                     android:id="@+id/addressRadioBtn"
                     android:layout_width="26dp"
                     android:layout_height="22dp"
-                    android:layout_marginTop="9dp"
+                    android:layout_marginTop="5dp"
                     android:padding="0dp" />
 
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_marginLeft="15dp">
@@ -72,11 +73,33 @@
                         android:textSize="12sp" />
 
                     <TextView
-                        android:id="@+id/deliverToAddress"
+                        android:id="@+id/line1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="12dp"
-                        android:text="24 Airport Rd -\nGarhoud - Dubai -\nUnited Arab Emirates"
+                        android:text="Line 1"
+                        android:textColor="@color/black"
+                        android:textFontWeight="500"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                    android:id="@+id/state"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="12dp"
+                    android:text="State"
+                    android:textColor="@color/black"
+                    android:textFontWeight="500"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/country"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="12dp"
+                        android:text="Country"
                         android:textColor="@color/black"
                         android:textFontWeight="500"
                         android:textSize="12sp"
@@ -116,16 +139,16 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:gravity="right"
+                    android:layout_weight="1"
                     android:orientation="vertical">
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/defaultButton"
                     android:layout_width="72dp"
                     android:layout_height="18dp"
-                    android:backgroundTint="#FFFFFF"
+                    android:backgroundTint="#959595"
                     android:insetTop="0dp"
                     android:insetBottom="0dp"
                     android:text="Default"
