--- a/app/src/main/res/layout/fragment_empty_address_book.xml
+++ b/app/src/main/res/layout/fragment_empty_address_book.xml
@@ -212,6 +212,27 @@
 
                         </LinearLayout>
 
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:layout_marginHorizontal="23dp"
+                            android:layout_marginTop="14dp"
+                            android:background="#C4C4C4" />
+
+                        <TextView
+                            android:id="@+id/addMoreAddress"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="21dp"
+                            android:text="Add more address"
+                            android:gravity="center"
+                            android:textSize="14sp"
+                            android:textFontWeight="500"
+                            android:layout_gravity="center_horizontal"
+                            android:textColor="#3A5FD8"
+                            android:drawableRight="@drawable/ic_add"
+                            android:drawablePadding="5dp"/>
+
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/setDefaultAddrsBtn"
                             android:layout_width="match_parent"
