--- a/app/src/main/res/layout/single_all_delivery_addresses.xml
+++ b/app/src/main/res/layout/single_all_delivery_addresses.xml
@@ -156,7 +156,8 @@
                     android:textColor="@color/black"
                     android:textSize="8sp"
                     app:cornerRadius="6dp"
-                    app:elevation="0dp" />
+                    app:elevation="0dp"
+                    android:visibility="gone"/>
 
 
                     <TextView
