--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".UI.OnBoarding.OnBoardingActivity">
+    tools:context=".UI.OnBoarding.OnBoardingActivity"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
