--- a/app/src/main/res/layout/activity_sign_up_valid.xml
+++ b/app/src/main/res/layout/activity_sign_up_valid.xml
@@ -56,7 +56,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
 
-                android:id="@+id/firstName"
+                android:id="@+id/firstNameField"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
