--- a/app/src/main/res/layout/fragment_add_adress.xml
+++ b/app/src/main/res/layout/fragment_add_adress.xml
@@ -282,7 +282,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="28dp"
                                 android:hint="Choose Your Country"
-                                android:inputType="text"
+                                android:inputType="none"
                                 android:padding="0dp"
                                 android:textSize="12sp"
                                 />
