--- a/app/src/main/res/layout/all_address_spinner.xml
+++ b/app/src/main/res/layout/all_address_spinner.xml
@@ -3,8 +3,7 @@
     android:text="All Address"
 
     android:paddingLeft="10dp"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
+    android:paddingVertical="5dp"
     android:textSize="12sp"
     android:maxLines="1"
     android:layout_width="match_parent"
