--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -316,6 +316,7 @@
                             android:textSize="14sp"/>
 
                         <com.google.android.material.button.MaterialButton
+                            android:id="@+id/addYourFirstOrderBtn"
                             android:layout_width="240dp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="18dp"
