--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -187,6 +187,7 @@
                         android:visibility="gone"/>
 
                     <ImageView
+                        android:id="@+id/emptyWalletImage"
                         android:layout_width="89dp"
                         android:layout_height="72dp"
                         android:src="@drawable/empty_wallet"
@@ -194,6 +195,7 @@
                         android:layout_gravity="center_horizontal"/>
 
                     <TextView
+                        android:id="@+id/emptyWalletText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="22dp"
@@ -210,7 +212,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="3dp"
-                        android:id="@+id/showMoreContent">
+                        android:id="@+id/showMoreContent"
+                        android:visibility="gone">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -219,14 +222,12 @@
                             android:textFontWeight="600"
                             android:textColor="#3A5FD8"
                             android:textSize="10sp"
-                            android:layout_gravity="center_vertical"
-                            android:visibility="gone"/>
+                            android:layout_gravity="center_vertical" />
                         <ImageView
                             android:layout_marginLeft="6dp"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
-                            android:src="@mipmap/showmore"
-                            android:visibility="gone"/>
+                            android:src="@mipmap/showmore" />
                     </LinearLayout>
 
                 </LinearLayout>
