--- a/app/src/main/res/layout/fragment_fourth_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_fourth_on_boarding.xml
@@ -54,6 +54,7 @@
                 android:backgroundTint="@color/button_color"
                 android:letterSpacing="0.03"
                 android:text="Unlock now!"
+                android:textColor="@color/white"
                 android:textFontWeight="700"
                 android:textSize="24dp"
                 android:textStyle="bold"
