--- a/app/src/main/res/drawable/edit_text_bg_2.xml
+++ b/app/src/main/res/drawable/edit_text_bg_2.xml
@@ -7,7 +7,7 @@
             android:shape="rectangle">
             <stroke android:width="1dp"  android:color="@color/hint_color"/>
             <solid android:color="@color/box_background_color"/>
-            <corners android:radius="5dp"/>
+            <corners android:topLeftRadius="5dp" android:bottomLeftRadius="5dp"/>
 
         </shape>
     </item>
