--- a/app/src/main/res/layout/fragment_address_book.xml
+++ b/app/src/main/res/layout/fragment_address_book.xml
@@ -190,7 +190,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="23dp"
                                 android:layout_marginTop="28dp"
-                                android:text="Billing Address"
+                                android:text="Delivery Address"
                                 android:textColor="@color/black"
                                 android:textFontWeight="700"
                                 android:textSize="14sp" />
@@ -549,9 +549,10 @@
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/loginBtn"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="32dp"
-                            android:layout_marginHorizontal="109dp"
+                            android:paddingHorizontal="16dp"
+                            android:layout_gravity="center"
                             android:layout_marginTop="28dp"
                             android:layout_marginBottom="28dp"
                             android:backgroundTint="#2D8DFF"
@@ -559,7 +560,6 @@
                             android:insetBottom="0dp"
                             android:letterSpacing="0.03"
                             android:lineHeight="14sp"
-                            android:padding="0dp"
                             android:text="Set Default Address"
                             android:textAllCaps="false"
                             android:textColor="@color/white"
