--- a/app/src/main/res/layout/fragment_first_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_first_on_boarding.xml
@@ -65,6 +65,7 @@
                 android:backgroundTint="@color/button_color"
                 android:paddingVertical="13dp"
                 android:text="Next"
+                android:textColor="@color/white"
                 android:textFontWeight="700"
                 android:textSize="24dp"
                 android:textStyle="bold"
