--- a/app/src/main/res/layout/fragment_third_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_third_on_boarding.xml
@@ -81,6 +81,7 @@
                 android:paddingTop="13dp"
                 android:paddingBottom="14dp"
                 android:text="Next"
+                android:textColor="@color/white"
                 android:textFontWeight="700"
                 android:textSize="24dp"
                 android:textStyle="bold"
