--- a/app/src/main/res/layout/fragment_view_profile.xml
+++ b/app/src/main/res/layout/fragment_view_profile.xml
@@ -170,6 +170,75 @@
                             />
                     </com.google.android.material.card.MaterialCardView>
 
+
+
+
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:layout_marginTop="10dp"-->
+<!--                        android:layout_marginHorizontal="30dp"-->
+<!--                        android:background="@drawable/edittext_bg">-->
+
+<!--                        <com.google.android.material.textfield.TextInputLayout-->
+<!--                            android:layout_width="70dp"-->
+<!--                            android:layout_height="28dp"-->
+<!--                            android:layout_gravity="center"-->
+<!--                            app:boxStrokeWidth="0dp"-->
+<!--                            app:boxStrokeWidthFocused="0dp"-->
+<!--                            app:hintAnimationEnabled="false"-->
+<!--                            app:hintEnabled="false"-->
+<!--                            android:focusableInTouchMode="false"-->
+<!--                            style="@style/Widget.AppCompat.Spinner.DropDown"-->
+<!--                            android:focusable="false"-->
+<!--                            android:background="@drawable/edit_text_bg_2">-->
+
+<!--                        <com.google.android.material.textfield.MaterialAutoCompleteTextView-->
+<!--                            android:id="@+id/nameSpinner"-->
+<!--                            android:layout_width="70dp"-->
+<!--                            android:layout_height="20dp"-->
+<!--                            android:hint="Title"-->
+<!--                            android:layout_marginLeft="5dp"-->
+<!--                            android:layout_gravity="center"-->
+<!--                            android:inputType="none"-->
+<!--                            android:padding="0dp"-->
+<!--                            android:textSize="12sp"-->
+<!--                            android:background="@color/box_background_color"-->
+<!--                            android:drawableEnd="@drawable/dropdown_icon"-->
+<!--                            android:layout_marginRight="4dp"/>-->
+
+<!--                        </com.google.android.material.textfield.TextInputLayout>-->
+
+<!--                        <View-->
+<!--                            android:layout_width="1dp"-->
+<!--                            android:layout_height="28dp"-->
+<!--                            android:layout_toRightOf="@+id/titleSpinner"-->
+<!--                            android:background="@color/hint_color" />-->
+
+<!--                        <EditText-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="28dp"-->
+<!--                            android:layout_toRightOf="@+id/verticalLine"-->
+<!--                            android:background="@null"-->
+<!--                            android:hint="Nikkitha Shankar"-->
+<!--                            android:inputType="text"-->
+<!--                            android:maxLines="1"-->
+
+<!--                            android:layout_weight="1"-->
+<!--                            android:paddingTop="-10dp"-->
+<!--                            android:textColor="@color/black"-->
+<!--                            android:textColorHint="@color/hint_color"-->
+<!--                            android:textSize="12sp" />-->
+
+<!--                    </LinearLayout>-->
+
+
+
+
+
+
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -191,26 +260,27 @@
 
                         <LinearLayout
                             android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:background="@drawable/edittext_bg"
-                            android:layout_height="wrap_content">
+                            android:background="@drawable/edittext_bg">
+
                             <com.google.android.material.textfield.TextInputLayout
                                 android:layout_width="wrap_content"
-                                android:layout_height="28dp"
+                                android:layout_height="30dp"
                                 app:boxStrokeWidth="0dp"
                                 app:boxStrokeWidthFocused="0dp"
                                 app:hintAnimationEnabled="false"
                                 app:hintEnabled="false"
                                 android:focusableInTouchMode="false"
                                 android:focusable="false"
-                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
-                                app:endIconTint="@color/hint_color"
-                                >
+                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                                app:endIconTint="@color/hint_color">
 
                                 <com.google.android.material.textfield.MaterialAutoCompleteTextView
+
                                     android:id="@+id/titleSpinner"
                                     android:layout_width="wrap_content"
-                                    android:layout_height="28dp"
+                                    android:layout_height="30dp"
                                     android:hint="Title"
                                     android:inputType="none"
                                     android:padding="0dp"
@@ -232,7 +302,6 @@
                                 android:layout_height="28dp"
                                 android:layout_toRightOf="@+id/verticalLine"
                                 android:background="@null"
-                                android:textCursorDrawable="@color/hint_color"
                                 android:hint="Nikkitha Shankar"
                                 android:inputType="text"
                                 android:maxLines="1"
@@ -268,7 +337,7 @@
 
                     <EditText
                         android:layout_width="match_parent"
-                        android:layout_height="28dp"
+                        android:layout_height="30dp"
                         android:layout_marginLeft="34dp"
                         android:layout_marginTop="3dp"
                         android:layout_marginRight="59dp"
@@ -276,7 +345,6 @@
                         android:hint="nikkitha@gmail.com"
                         android:inputType="textEmailAddress"
                         android:paddingLeft="10dp"
-                        android:textCursorDrawable="@color/hint_color"
                         android:textColor="@color/black"
                         android:textColorHint="@color/hint_color"
                         android:textSize="12sp"
@@ -362,7 +430,7 @@
                             <com.google.android.material.textfield.MaterialAutoCompleteTextView
                                 android:id="@+id/ccpSpinners"
                                 android:layout_width="wrap_content"
-                                android:layout_height="28dp"
+                                android:layout_height="30dp"
                                 android:padding="0dp"
                                 android:inputType="none"
                                 android:textColor="@color/black"
@@ -374,12 +442,12 @@
 
                         <View
                             android:layout_width="1dp"
-                            android:layout_height="match_parent"
+                            android:layout_height="30dp"
                             android:background="@color/hint_color"/>
 
                         <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
-                            android:layout_height="28dp"
+                            android:layout_height="30dp"
                             app:boxStrokeWidthFocused="0dp"
                             app:boxStrokeWidth="0dp"
                             app:hintEnabled="false"
@@ -400,14 +468,14 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="34dp"
                         android:layout_marginTop="16dp">
 
 
                         <androidx.appcompat.widget.SwitchCompat
                             android:id="@+id/whatsappSwitch"
-                            android:layout_width="wrap_content"
+                            android:layout_width="32dp"
                             android:layout_height="16dp"
+                            android:layout_marginLeft="34dp"
                             android:layout_gravity="center_vertical"
                             android:thumb="@drawable/thumb"
 
@@ -435,6 +503,7 @@
                         android:insetTop="0dp"
                         android:insetBottom="0dp"
                         android:text="Update"
+                        android:textColor="@color/white"
                         android:textAllCaps="false"
                         android:textFontWeight="700"
                         android:textSize="12sp"
@@ -496,6 +565,7 @@
                             android:insetTop="0dp"
                             android:insetBottom="0dp"
                             android:text="Invite"
+                            android:textColor="@color/white"
                             android:textAllCaps="false"
                             android:textSize="10sp"
                             app:backgroundTint="#17B28F" />
@@ -602,6 +672,7 @@
                 android:layout_height="32dp"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:text="Logout"
+                app:elevation="4dp"
                 android:textAllCaps="false"
                 android:layout_marginHorizontal="21dp"
                 android:insetBottom="0dp"
